--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
     <div class="nav-links">
       <ul>
         <li><a href="#logo" class="o">PORTADA</a></li>
-        <li><a href="#intro" class="o">INTRODUCCIÓN</a></li>
+        <li><a href="#intro" class="o">INICIO</a></li>
         <li><a href="#MOV" class="o">MERCADO</a></li>
         <li><a href="#NFT" class="o">NFTS</a></li>
-        <li><a href="#nos" class="o">NOSOTROS</a></li>
+        <li><a href="#nos" class="o">EQUIPO</a></li>
 
       </ul>
     </div>
@@ -108,118 +108,122 @@
           <br>
           <br>
 
-          <div class="cotainer scroll-content1 fadeTop" style="padding-right: 10%;padding-left: 10%; ">
+          <div class="cotainer scroll-content fadeTop" style="padding-right: 10%;padding-left: 10%; ">
 
             <div class="row" style="background-color: #1177ca65;color: rgb(255, 255, 255); border-radius:25px;">
-              <div class="col-1"><br><img src="img/eth.png" style="width: 48px;" alt=""></div>
-              <div class="col-5"><br>
+              <div class="col-2"><br><img src="img/eth.png" style="width: 48px;" alt=""></div>
+              <div class="col-4" style="text-align: center;"><br>
                 <p> ETH <br> (Ethereun)</p>
               </div>
-              <div class="col-4"><br>
-                <p>1062.25<br>$</p>
-              </div>
-              <div class="col-2" style="color: red;"><br>
-                <p>- 1.7<br>%</p>
+              <div class="col-6"><br>
+                <p>1062.25$<br><p style="color: red;">- 1.7%</p></p>
               </div>
               <hr>
-              <div class="col-1"><img src="img/btc.png" style="width: 48px;" alt=""></div>
-              <div class="col-5">
+
+
+
+              <div class="col-2"><img src="img/btc.png" style="width: 48px;" alt=""></div>
+              <div class="col-4">
                 <p> BTC <br> (Bitcoin)</p>
               </div>
-              <div class="col-4">
-                <p>19417.4<br>$</p>
-              </div>
-              <div class="col-2" style="color: red;">
-                <p>- 2.7<br>%</p>
+              <div class="col-6">
+                <p>19417.4$<br><p style="color: red;">- 2.7%</p></p>
               </div>
               <hr>
-              <div class="col-1"><img src="img/USDT.png" style="width: 48px;" alt=""></div>
-              <div class="col-5">
+
+
+
+
+
+              <div class="col-2"><img src="img/USDT.png" style="width: 48px;" alt=""></div>
+              <div class="col-4">
                 <p> USDT <br> (Tether)</p>
               </div>
-              <div class="col-4">
-                <p>1.00044<br>$</p>
-              </div>
-              <div class="col-2" style="color: red;">
-                <p>- 0.1<br>%</p>
+              <div class="col-6">
+                <p>1.00044$<br><p style="color: red;">- 0.1%</p></p>
               </div>
               <hr>
-              <div class="col-1"><img src="img/usdc.png" style="width: 48px;" alt=""></div>
-              <div class="col-5">
+
+
+
+
+
+              <div class="col-2"><img src="img/usdc.png" style="width: 48px;" alt=""></div>
+              <div class="col-4">
                 <p> USDC <br> (USD Coin)</p>
               </div>
-              <div class="col-4">
-                <p>0.99941<br>$</p>
-              </div>
-              <div class="col-2" style="color: red;">
-                <p>- 0.1<br>%</p>
+              <div class="col-6">
+                <p>0.99941$<br><p style="color: red;">- 0.1%</p></p>
               </div>
               <hr>
-              <div class="col-1"><img src="img/bnb.png" style="width: 48px;" alt=""></div>
-              <div class="col-5">
+
+
+
+
+
+              <div class="col-2"><img src="img/bnb.png" style="width: 48px;" alt=""></div>
+              <div class="col-4">
                 <p> BNB <br> (BNB)</p>
               </div>
-              <div class="col-4">
-                <p>223.086<br>$</p>
-              </div>
-              <div class="col-2" style="color: red;">
-                <p>- 2.5<br>%</p>
+              <div class="col-6">
+                <p>223.086$<br><p style="color: red;">- 2.5%</p></p>
               </div>
               <hr>
-              <div class="col-1"><img src="img/busd.png" style="width: 48px;" alt=""></div>
-              <div class="col-5">
+
+
+              <div class="col-2"><img src="img/busd.png" style="width: 48px;" alt=""></div>
+              <div class="col-4">
                 <p> BUSD <br> (Binance USD)</p>
               </div>
-              <div class="col-4">
-                <p>1.01907<br>$</p>
-              </div>
-              <div class="col-2" style="color: lightgreen;">
-                <p>+ 0.7<br>%</p>
+              <div class="col-6">
+                <p>1.01907$<br><p style="color: lightgreen;">+ 0.7%</p></p>
               </div>
               <hr>
-              <div class="col-1"><img src="img/xrp.png" style="width: 48px;" alt=""></div>
-              <div class="col-5">
+
+
+
+              <div class="col-2"><img src="img/xrp.png" style="width: 48px;" alt=""></div>
+              <div class="col-4">
                 <p> XRP <br> (XRP)</p>
               </div>
-              <div class="col-4">
-                <p>0.31304<br>$</p>
-              </div>
-              <div class="col-2" style="color: red;">
-                <p>- 0.7<br>%</p>
+              <div class="col-6">
+                <p>0.31304$<br><p style="color: red;">- 0.7%</p></p>
               </div>
               <hr>
-              <div class="col-1"><img src="img/ada.png" style="width: 48px;" alt=""></div>
-              <div class="col-5">
+
+
+
+
+              <div class="col-2"><img src="img/ada.png" style="width: 48px;" alt=""></div>
+              <div class="col-4">
                 <p> ADA <br> (Carbano)</p>
               </div>
-              <div class="col-4">
-                <p>0.41638<br>$</p>
-              </div>
-              <div class="col-2" style="color: red;">
-                <p>- 4.4<br>%</p>
+              <div class="col-6">
+                <p>0.41638$<br><p style="color: red;">- 4.4%</p></p>
               </div>
               <hr>
-              <div class="col-1"><img src="img/sol.png" style="width: 48px;" alt=""></div>
-              <div class="col-5">
+
+
+              <div class="col-2"><img src="img/sol.png" style="width: 48px;" alt=""></div>
+              <div class="col-4">
                 <p> SOL <br> (Solana)</p>
               </div>
-              <div class="col-4">
-                <p>33.2196<br>$</p>
-              </div>
-              <div class="col-2" style="color: red;">
-                <p>- 3.4<br>%</p>
+              <div class="col-6">
+                <p>33.2196$<br><p style="color: red;">- 3.4%</p></p>
               </div>
               <hr>
-              <div class="col-1"><img src="img/dai.png" style="width: 48px;" alt=""></div>
-              <div class="col-5">
+
+
+
+
+              <div class="col-2"><img src="img/dai.png" style="width: 48px;" alt=""></div>
+              <div class="col-4">
                 <p> DAI <br> (Dai)</p>
               </div>
-              <div class="col-4">
-                <p>0.99974<br>$</p>
+              <div class="col-6">
+                <p>0.99974$<br><p>0.0%</p></p>
               </div>
-              <div class="col-2">
-                <p>0.0<br>%</p>
-              </div>
+
 
 
               <div class="col-12 coca blanco" style="text-align: center;">
